syntax = "proto3";

package messages;
option go_package = "pkg/messages";
// 


message GameLobbyMessage { 
    int64 timestamp = 1; // Timestamp

    oneof lobbyMessage { 
        
        PlayerMessage playerMessage = 2;
        GameLoadingMessage gameLoadingMessage = 3;

    }
}

message GameLobbyCommand { 
    string player_id = 1; // ID of the player sending the command
    int64 timestamp = 2; // Timestamp
    oneof command {
        ReadyUpMessage ready_up = 3;
        StartGameMessage start_game = 4;
    }
}


message PlayerMessage {
  string player_id = 1;
  string display_name = 2;
  string color = 3; 
  bool is_ready = 4;

}


message ReadyUpMessage {
  string user_id = 1;
  bool ready = 2;
}


message GalaxyGenerateSettings { 
    int32 numStars = 1; 
    string shape = 2;
    int32 maxHyperlanes = 3;
    int32 hyperlaneConnectivity = 4;

}   

message StartGameMessage {
    GalaxyGenerateSettings settings = 1;
}


message GameLoadingMessage { 
    float progress = 1; // Progress of the game loading, from 0.0 to 1.0
    string text = 2;
}
