syntax = "proto3";

import "client_commands.proto";

package messages;
option go_package = "pkg/messages";

// =============================================================================
// SERVER MESSAGES (Server -> Client)
// =============================================================================

// Main message wrapper from server
message ServerMessage {
    string messageId = 1;    // Optional response ID
    int64 timestamp = 2;
    
    oneof message {
        // Lobby Messages
        LobbyMessage lobbyMessage = 10;
        
        // Game Messages
        GameMessage gameMessage = 20;
        
        // Chat Messages
        ChatMessage chatMessage = 30;
        
        // System Messages
        SystemMessage systemMessage = 40;
        
        // Error Messages
        ErrorMessage errorMessage = 50;
    }
}

// =============================================================================
// LOBBY MESSAGES
// =============================================================================

message LobbyMessage {
    oneof content {
        LobbyStateMessage lobby_state = 1;
        PlayerJoinedMessage player_joined = 2;
        PlayerLeftMessage player_left = 3;
        PlayerUpdatedMessage player_updated = 4;
        LobbySettingsUpdatedMessage settings_updated = 5;
        GameStartingMessage game_starting = 6;
        GameLoadingMessage game_loading = 7;
    }
}

// Complete lobby state - sent when player joins or significant changes occur
message LobbyStateMessage {
    string sessionId = 1;
    string inviteCode = 2;
    string hostPlayerId = 3;
    LobbyStatus status = 4;
    repeated LobbyPlayer players = 5;
    GalaxyGenerateSettings settings = 6;
    
    enum LobbyStatus {
        WAITING = 0;
        STARTING = 1;
        IN_GAME = 2;
    }
}

message LobbyPlayer {
    string playerId = 1;
    string displayName = 2;
    string color = 3;
    bool isReady = 4;
    bool isHost = 5;
    bool isConnected = 6;
    int64 joinedAt = 7;
}

// Individual update messages for efficiency
message PlayerJoinedMessage {
    LobbyPlayer player = 1;
}

message PlayerLeftMessage {
    string playerId = 1;
    string displayName = 2;
}

message PlayerUpdatedMessage {
    LobbyPlayer player = 1;
}

message LobbySettingsUpdatedMessage {
    GalaxyGenerateSettings settings = 1;
    string updatedByPlayerId = 2;
}

message GameStartingMessage {
    GalaxyGenerateSettings finalSettings = 1;
    int64 startTime = 2;
}

message GameLoadingMessage {
    float progress = 1;         // 0.0 to 1.0
    string statusText = 2;     // "Generating galaxy...", "Creating empires...", etc.
    string phase = 3;           // "GALAXY_GENERATION", "EMPIRE_SETUP", etc.
}

// =============================================================================
// GAME MESSAGES
// =============================================================================

message GameMessage {
    oneof content {
        GameStateMessage game_state = 1;
        GameEventMessage game_event = 2;
        TurnUpdateMessage turn_update = 3;
    }
}

message GameStateMessage {
    // Full or partial game state
    string stateData = 1;      // JSON or binary game state
    int64 turnNumber = 2;
    int64 gameTime = 3;
}

message GameEventMessage {
    string eventType = 1;      // "FLEET_ARRIVED", "BATTLE_OCCURRED", etc.
    string eventData = 2;      // JSON event data
    repeated string affectedPlayers = 3;
}

message TurnUpdateMessage {
    int64 turnNumber = 1;
    int64 turnDeadline = 2;
    bool isPaused = 3;
}

// =============================================================================
// CHAT MESSAGES
// =============================================================================

message ChatMessage {
    string senderId = 1;
    string senderDisplayName = 2;
    int64 timestamp = 3;
    
    oneof scope {
        GlobalChatMessage global = 10;
        PrivateChatMessage private = 11;
        LobbyChatMessage lobby = 12;
        SystemChatMessage system = 13;
    }
}

message GlobalChatMessage {
    string message = 1;
}

message PrivateChatMessage {
    string recipientId = 1;
    string message = 2;
}

message LobbyChatMessage {
    string message = 1;
}

message SystemChatMessage {
    string message = 1;
    string messageType = 2;    // "INFO", "WARNING", "ERROR"
}

// =============================================================================
// SYSTEM MESSAGES
// =============================================================================

message SystemMessage {
    oneof content {
        ConnectionMessage connection = 1;
        AuthMessage auth = 2;
        ServerStatusMessage server_status = 3;
    }
}

message ConnectionMessage {
    string status = 1;          // "CONNECTED", "RECONNECTING", "DISCONNECTED"
    string reason = 2;
}

message AuthMessage {
    string status = 1;          // "AUTHENTICATED", "TOKEN_EXPIRED", "INVALID_TOKEN"
    string message = 2;
}

message ServerStatusMessage {
    bool isMaintenance = 1;
    string version = 2;
    int32 playerCount = 3;
}

// =============================================================================
// ERROR MESSAGES
// =============================================================================

message ErrorMessage {
    string errorCode = 1;      // "LOBBY_FULL", "INVALID_COMMAND", etc.
    string errorMessage = 2;
    string context = 3;         // Additional context for debugging
    repeated string details = 4; // Detailed error information
}

// =============================================================================
// SHARED SETTINGS (imported from client_commands.proto)
// =============================================================================

// GalaxyGenerateSettings is imported from client_commands.proto
